# Frogger2

./: .gitignore  CMakeLists.txt  build.sh  config.txt  enunPract2.docx  info.txt
assets/maps/: default.txt
src/: Button.cpp  Button.h  Collision.h  Crosser.cpp  Crosser.h  EndState.cpp  EndState.h  EventHandler.h  FileError.cpp  FileFormatError.cpp  FileFormatError.h  FileNotFoundError.cpp  FileNotFoundError.h  Frog.cpp  Frog.h  Game.cpp  Game.h  GameError.cpp  GameError.h  GameObject.cpp  GameObject.h  HomedFrog.cpp  HomedFrog.h  Label.cpp  Label.h  Log.cpp  Log.h  MainMenuState.cpp  MainMenuState.h  PauseState.cpp  PauseState.h  Platform.cpp  Platform.h  PlayState.cpp  PlayState.h  SDLError.cpp  SDLError.h  SceneObject.cpp  SceneObject.h  Texture.cpp  (+14 more)
